--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.h2.console.enabled=true
