--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/crescendobooking
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
-#spring.data.rest.basePath=/rest
+spring.data.rest.basePath=/rest
 spring.cache.type=redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
