--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.cache.type=redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.cache.redis.time-to-live=172800000
+spring.application.name=crescendobooking
+eureka.instance.hostname=localhost
+server.port=5972
+spring.kafka.bootstrap-servers=localhost:54018
+spring.kafka.consumer.group-id=crescendobooking
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
